# StreamIQ-App

./: .coverage  .env  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  dvc.yaml  launch_streamiq.bat  metrics.json  mlflow_tracking.py  model.pkl  pyproject.toml  requirements-dev.txt  requirements-ml.txt  requirements.txt  results.csv  setup.cfg  setup.py  stop_streamiq.bat
.dvc/: config
.github/workflows/: ci.yml  github_actions.yml  test.yml
.streamlit/: config.toml
ci_cd/: github_actions.yml
dashboards/: app.py  components.py  streamlit_app.py  test_app.py
dashboards/pages/: data.py  evaluation.py  training.py
data/: .gitignore  call_center.csv.dvc  call_center_prepared.csv  claims.csv.dvc  claims_prepared.csv  metrics.txt  test.csv
ecs/: task_defination.json
mlflow/experiments/: config.yml
pages/: demo.py
scripts/: evaluate.py  prepare.py  preprocess.py  train.py
src/: __init__.py  _init_.py  app.py
src/api/: __init__.py  routes.py
src/backend/: backend.py  main.py  streamiq.db
src/dashboards/: __init__.py  app.py  test_logs.py
src/dashboards/pages/: BigDataDemo.py  ModelPrediction.py  data.py  demo.py  evaluate.py  evaluation.py  training.py
src/db/: __init__.py  connection.py  dummy_data.py  init_db.py  models.py  repository.py
src/nlp/: __init__.py  intent.py  satisfaction_predictor.py  sentiment.py
src/satisfaction/: __init__.py  predictor.py
src/scripts/: apply_branding.py  evaluate.py  prepare.py  preprocess.py  train.py
src/speech_to_text/: __init__.py  transcriber.py
src/streamiq.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tests/: test_evaluate.py  test_sentiment.py
src/utils/: __init__.py  branding.py  chart_theme.py  export_utils.py  helpers.py  loaders.py  logger.py  plot_utils.py  preferences.py  session_state_initializer.py  validators.py
streamiq/: app.py  mlflow_utils.py  model_utils.py  nlp_utils.py  spark_utils.py
tests/: __init__.py  test_backend.py  test_branding.py  test_predictor.py  test_transcriber.py
venv311/: pyvenv.cfg
venv311/Scripts/: activate  dul-receive-pack  dul-upload-pack  find_spark_home.py  jp.py  numba  pygrun
