[project]
name = "streamiq"
version = "0.1.0"
description = "StreamIQ – Real-Time Customer Intelligence with modular NLP pipeline"
authors = [
    { name = "Percy Mathabela", email = "peccymath@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    "Flask==3.0.2",
    "streamlit==1.32.0",
    "pyspark==3.5.1",
    "spark-nlp==5.3.0",
    "transformers==4.39.3",
    "torch==2.2.2",
    "SQLAlchemy==2.0.29",
    "mysqlclient==2.2.4",
    "alembic==1.13.1",
    "mlflow==2.11.3",
    "dvc==3.50.0",
    "pandas==2.2.1",
    "numpy==1.26.4",
    "scikit-learn==1.4.1",
    "loguru==0.7.2",
    "pytest==8.1.1",
    "pytest-cov==5.0.0",
    "docker==7.0.0",
    "boto3==1.34.79"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = ["src/tests"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
