[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "streamiq"
version = "0.1.0"
description = "StreamIQ – Real-Time Customer Intelligence with modular NLP pipeline"
authors = [
    { name = "Percy Thabo Mathebula" }
]
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    # Core web framework
    "flask>=3.0.0",

    # Dashboard framework
    "streamlit>=1.32.0",

    # Data science stack
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.1.post1,<1.6",   # loosened pin for upgrade flexibility

    # Database layer (SQLite built-in, just need SQLAlchemy + Alembic)
    "sqlalchemy>=2.0.0",
    "alembic==1.13.1",

    # HTTP requests
    "requests>=2.31.0",

    # Config management
    "python-decouple==3.8",
    "python-dotenv>=1.0.0",

    # Validation
    "pydantic>=2.6.0",

    # NLP modules
    "nltk>=3.8.1",
    "transformers>=4.39.0",
    "spacy>=3.7.0",
    "spark-nlp==5.3.0",

    # Speech-to-text
    "speechrecognition>=3.10.0",
    "openai-whisper>=20231117",

    # Workflow & MLOps
    "mlflow>=2.11.0,<3.0",
    "dvc>=3.49.0,<4.0",
    "docker==7.0.0",

    # Visualization
    "plotly==5.19.0",
    "matplotlib==3.8.3",
    "seaborn==0.13.2",

    # Testing & CI/CD
    "pytest==8.1.1",
    "pytest-cov==5.0.0",
    "coverage==7.4.4",

    # Big data / ML
    "pyspark==3.5.1",
    "torch==2.2.2",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["streamiq*"]
exclude = ["tests*", "docs*"]
