[metadata]
name = streamiq
version = 0.1.0
description = StreamIQ – Real-Time Customer Intelligence with modular NLP pipeline
author = Percy Thabo Mathebula
license = MIT

[options]
packages = find:
python_requires = >=3.11
include_package_data = True

[options.packages.find]
where = src

[tool:pytest]
addopts = -ra -q --cov=src --cov-report=term-missing
testpaths = src/tests

[flake8]
max-line-length = 88
extend-ignore = E203,W503
exclude = .venv,.git,__pycache__,build,dist

[isort]
profile = black

[coverage:run]
branch = True
source = src

[coverage:report]
show_missing = True
skip_covered = True

[coverage:html]
directory = coverage_html_report
